--- a/docs/websocket.adoc
+++ b/docs/websocket.adoc
@@ -1,3 +1,13 @@
+Top of pweb_app.py
+```
+import os
+import eventlet
+
+if os.environ.get('env', 'Local').lower() == 'prod':
+    eventlet.monkey_patch()
+
+from pweb import PWebEngine
+```
 
 WebSocket Nginx Configuration
 
@@ -29,5 +39,5 @@ CORS_CONFIG:
 
 gunicorn with eventlet `pip install eventlet`
 ```yml
-gunicorn --worker-class eventlet --workers 3 --env env=Prod --bind unix:PWeb.sock pweb_app:wsgi --log-file pweb-app.log --capture-output
+gunicorn --worker-class eventlet --workers 3 --env env=Prod --preload --capture-output --bind unix:PWeb.sock pweb_app:wsgi --log-file pweb-app.log
 ```
