Working on uWsgi Server

--- a/docs/hosting.adoc
+++ b/docs/hosting.adoc
@@ -2,3 +2,8 @@
 
 
 . https://www.digitalocean.com/community/tutorials/how-to-serve-flask-applications-with-uwsgi-and-nginx-on-ubuntu-22-04
+
+
+```
+uwsgi --ini uwsgi.ini
+```
