--- a/docs/hosting.adoc
+++ b/docs/hosting.adoc
@@ -7,3 +7,20 @@
 ```
 uwsgi --ini uwsgi.ini
 ```
+
+```
+server {
+    listen       80 default_server;
+    server_name  _;
+
+    location / {
+        include uwsgi_params;
+        proxy_http_version 1.1;
+        proxy_buffering off;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        uwsgi_pass unix:/home/v-host/pweb-example/PWeb.sock;
+    }
+}
+
+```
