--- a/docs/deploy/centos.adoc
+++ b/docs/deploy/centos.adoc
@@ -44,6 +44,7 @@ dnf install -y python3.11-devel openssl-devel gcc
 # Active virtual Environment
 source venv/bin/activate
 pip install uwsgi
+pip install gevent
 
 # Check HTTPS Package are available or not
 uwsgi --help | grep https
@@ -51,6 +52,7 @@ uwsgi --help | grep https
 
 
 == Nginx Configuration for uWsgi
+vim /etc/nginx/conf.d/pweb-example.conf
 ```conf
 server {
     listen       80;
@@ -66,7 +68,12 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        uwsgi_pass      unix:/home/pweb-example/PWeb.sock;
+        uwsgi_pass      unix:/home/v-host/pweb-example/PWeb.sock;
     }
 }
+```
+
+== Run Server
+```
+uwsgi --ini uwsgi.ini
 ```
